removed that weird gray line at the footer

--- a/aboutme.html
+++ b/aboutme.html
@@ -61,7 +61,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+          <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
           <li><a class="nav-link scrollto" href="/#portfolio">Work</a></li>
           <li><a class="nav-link scrollto active" href="/#about">About</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
@@ -129,12 +129,12 @@
                   <div class ="about-paragraph">
                     I'm currently a UX designer in training and working on
                     projects in product design and web development. Aside from
-                    design, I'm a big animal lover and I like to stay active by 
-                    running and exploring the outdoors. 
+                    design, you can find me exploring nature, editing videos, running, or 
                   </div>
                   <div class ="about-paragraph">
                     I'm always excited to collaborate and build new experiences. 
-                    Feel free to send me an email or connect with me on my social media platforms!
+                    You can reach me at: <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
+                    style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
                     <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a> -->
                     <br> <br>
@@ -208,7 +208,7 @@
   </main> <!-- End #main -->
   
 <!-- ======= Footer ======= -->
-<footer id="footer">
+<!-- <footer id="footer"> --> <!-- commenting out to get rid of that gray shadow line -->
   <div class="footer-top">
     <div class="container">
       <div class="row">
@@ -239,14 +239,14 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px; margin-bottom:30px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
             <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
           </div>
         </div>
       </div>
     </div>
   </div>
-</footer><!-- End Footer -->
+<!-- </footer> --> <!-- End Footer commenting out to get rid of that gray shadow line -->
 
   <!-- 01/28/22: Removing this
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to top"><i class="bi bi-arrow-up-short"></i></a> -->
