--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
+      <br>
       <h1> Hi, I'm Irene!👋 </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
       <h2> Recent Computer Science graduate from UC San Diego <br>
@@ -246,15 +247,15 @@
         <!-- adding let's get in touch box -->
         <!-- ======= OPTION 1 ======= -->
         <!-- adding let's get in touch box -->
-        <div style="position: relative; width: 500px; font-size: 20px; margin-bottom:10px; margin-top:100px;">
+        <!-- <div style="position: relative; width: 500px; font-size: 20px; margin-bottom:10px; margin-top:100px;">
           <br> <br> <br> Anything catch your eye? Let's get in touch! <br>
         </div>
-        <div style="position: relative; width: 500px; font-size: 18px; margin-bottom:20px; letter-spacing: 1px;">
+        <div style="position: relative; width: 500px; font-size: 18px; margin-bottom:20px; letter-spacing: 0px;">
           <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
           style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>
-          <!-- <a href="mailto: irenelue01@gmail.com" style="color:blue" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
+          <!-- <a href="mailto: irenelue01@gmail.com" style="color:blue" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
           <br>
-        </div>
+        </div> -->
       </div>
 
         <!-- ======= OPTION 2 ======= -->
@@ -296,45 +297,44 @@
   </main><!-- End #main -->
 
 <!-- ======= Footer ======= -->
-<footer id="footer">
-  <div class="footer-top">
-    <div class="container">
-      <div class="row">
-        <div class="container d-md-flex py-4">
-            <div class="credits">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you purchased the pro version. -->
-              <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
-              <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-            </div>
+<!-- <footer id="footer"> --> <!-- commenting out to get rid of that gray shadow line -->
+<div class="footer-top">
+  <div class="container">
+    <div class="row">
+      <div class="container d-md-flex py-4">
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
+          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
         </div>
-        <div class="section-contact-port">
-          <div class="me-md-auto text-center">
-            <div class="email">
-              <!-- <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
-              <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
-              <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
-              <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
-              <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a> -->
-              <a href="https://www.behance.net/irene_lue" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
-              <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
-            </div>
-          </div>
-        </div>
-
+      </div>
+      <div class="section-contact-port">
         <div class="me-md-auto text-center">
-          <div class="copyright">
-            <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
-            <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
+          <div class="email">
+            <!-- <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
+            <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
+            <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
+            <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
+            <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a> -->
+            <a href="https://www.behance.net/irene_lue" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
+            <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
           </div>
+        </div>
+      </div>
+      <div class="me-md-auto text-center">
+        <div class="copyright">
+          <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px;margin-bottom:30px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+          <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
         </div>
       </div>
     </div>
   </div>
-</footer><!-- End Footer -->
+</div> <!-- End Footer -->
+<!-- </footer> --> <!-- End Footer commenting out to get rid of that gray shadow line -->
 
     <!-- given for social media links at bottom right corner -->
     <!-- <div class="social-links text-center text-md-right pt-3 pt-md-0">
