--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -63,7 +63,7 @@
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
           <li><a class="nav-link scrollto active" href="/#portfolio">Work</a></li>
-          <li><a class="nav-link scrollto" href="/#about">About</a></li>
+          <li><a href="aboutme.html">About</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
 
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -289,7 +289,7 @@
   </main> <!-- End #main -->
   
 <!-- ======= Footer ======= -->
-<footer id="footer">
+<!-- <footer id="footer"> --> <!-- commenting out to get rid of that gray shadow line -->
   <div class="footer-top">
     <div class="container">
       <div class="row">
@@ -320,14 +320,14 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px;margin-bottom:30px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
             <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
           </div>
         </div>
       </div>
     </div>
   </div>
-</footer><!-- End Footer -->
+<!-- </footer> --> <!-- End Footer commenting out to get rid of that gray shadow line -->
 
 <!-- consistent buttons scrolling throughout pages -->
 <!-- <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
