--- a/aboutme.html
+++ b/aboutme.html
@@ -129,16 +129,16 @@
                   <div class ="about-paragraph">
                     I'm currently a UX designer in training and working on
                     projects in product design and web development. Aside from
-                    design, you can find me exploring nature, editing videos, running, or 
+                    design, you can find me exploring nature, running, or crafting my playlists on Spotify.
                   </div>
                   <div class ="about-paragraph">
-                    I'm always excited to collaborate and build new experiences. 
-                    You can reach me at: <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
+                    I'm always excited to collaborate and build new experiences. For questions and inquiries,
+                    feel free to reach me at: <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
                     <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a> -->
                     <br> <br>
-                    <a href="mailto: irenelue01@gmail.com" style="font-size: 20px" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
+                    <!-- <a href="mailto: irenelue01@gmail.com" style="font-size: 20px" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
                     <a href="https://www.linkedin.com/in/irenelue/" style="font-size: 20px" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/irenelue" style="font-size: 20px" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
                     <a href="https://www.instagram.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
