updated About Me

--- a/aboutme.html
+++ b/aboutme.html
@@ -129,7 +129,7 @@
                   <div class ="about-paragraph">
                     I'm currently a UX designer in training and working on
                     projects in product design and web development. Aside from
-                    design, you can find me exploring nature, running, or crafting playlists on Spotify.
+                    design, you can find me hiking, running, practicing photography, editing videos, or finding songs to add on Spotify.
                   </div>
                   <div class ="about-paragraph">
                     I'm always excited to collaborate and build new experiences. For questions and inquiries,
