fixing prof pic sizing issue

--- a/aboutme.html
+++ b/aboutme.html
@@ -95,12 +95,12 @@
           <div class="container">
               <div class="row content">
                 
-                <div class="col-lg-6 mx-auto">
+                <div class="col-lg-6 col-md-8">
                   <!-- added profile picture -->
                   <div class="container-fluid">
                     <div class="row-fluid">
                       <!-- team-0 profile picture -->
-                      <div class="col-lg-10 col-md-10 mx-auto">
+                      <div class="col-lg-11 col-md-8 mx-auto">
                         <!-- team-00 profile picture -->
                         <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                         <div class="member-img">             <!-- class="img-fluid rounded-circle" --> 
