fixing home page welcome headers

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <br>
-      <h1> Hi, I'm Irene!👋 </h1>
+      <h1> Hi, I'm Irene! 👋 </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
-      <h2> Recent Computer Science graduate from UC San Diego <br>
-      and designer creating digital experiences in Los Angeles, CA. </h2> 
+      <h2> Recent Computer Science graduate from UC San Diego and
+      designer creating digital experiences in Los Angeles. </h2> 
       <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script> -->
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
