fixed about me pic resizing

--- a/aboutme.html
+++ b/aboutme.html
@@ -95,7 +95,7 @@
           <div class="container">
               <div class="row content">
                 
-                <div class="col-lg-6 col-md-8">
+                <div class="col-lg-6 ">
                   <!-- added profile picture -->
                   <div class="container-fluid">
                     <div class="row-fluid">
@@ -132,8 +132,7 @@
                     design, you can find me hiking, running, practicing photography, editing videos, or streaming songs on Spotify.
                   </div>
                   <div class ="about-paragraph">
-                    I'm always excited to collaborate and build new experiences. For questions and inquiries,
-                    feel free to reach me at: <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
+                    I'm always excited to collaborate and build new experiences. Feel free to reach me at: <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
                     <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a> -->
