--- a/aboutme.html
+++ b/aboutme.html
@@ -142,6 +142,7 @@
                     <a href="https://github.com/irenelue" style="font-size: 20px" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
                     <a href="https://www.instagram.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
                     <a href="https://www.twitter.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
+                    <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
                     <a href="https://www.behance.net/irene_lue" style="font-size: 20px" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
 
                   </div>
