changed font from merriweather to mukta and mukta to work sans

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Irene Lue</title>
+  <title>Irene Lue </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -26,6 +26,9 @@
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+      <link href="http://fonts.cdnfonts.com/css/cocogoose?styles=44178" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +58,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
+      <h1 class="logo"><a href="index.html"> IRENE LUE </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -117,7 +120,7 @@
                 <div class="col-lg-6 mx-auto"> 
                   <div class="about-title">
                     <!-- <p style="font-size:200%"> -->
-                      Nice to meet you!
+                      NICE TO MEET YOU!
                     <!-- <p> -->
                   </div>
                   <div class ="about-paragraph">
@@ -156,7 +159,7 @@
                 <!-- ========== Added Instagram ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title">
-                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> Instagram </a>
+                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> INSTAGRAM </a>
                   </div>
                   <div class="row">
                     <div class="column">
@@ -239,7 +242,7 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px; margin-bottom:30px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px; margin-bottom:30px;"<span> </span> &copy; <span> IRENE LUE 2022 </span></h1>
             <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
           </div>
         </div>
