--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/cocogoose?styles=44178" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+        
+
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +62,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
+      <h1 class="logo"><a href="index.html"> IRENE LUE </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -113,7 +118,7 @@
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <br>
-      <h1> Hi, I'm Irene! 👋 </h1>
+      <h1> HELLO, I'M IRENE! 👋 </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
       <h2> Recent Computer Science graduate from UC San Diego and
       designer creating digital experiences in Los Angeles, CA. </h2> 
@@ -327,7 +332,7 @@
       </div>
       <div class="me-md-auto text-center">
         <div class="copyright">
-          <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px;margin-bottom:30px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+          <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;margin-bottom:30px;"<span> </span> &copy; <span> IRENE LUE 2022 </span></h1>
           <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
         </div>
       </div>
