--- a/aboutme.html
+++ b/aboutme.html
@@ -120,7 +120,7 @@
                 <div class="col-lg-6 mx-auto"> 
                   <div class="about-title">
                     <!-- <p style="font-size:200%"> -->
-                      NICE TO MEET YOU!
+                      NICE TO MEET YOU! 🤝
                     <!-- <p> -->
                   </div>
                   <div class ="about-paragraph">
@@ -136,7 +136,7 @@
                   </div>
                   <div class ="about-paragraph">
                     I'm always excited to collaborate and build new experiences. Feel free to reach me at: <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
-                    style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
+                    style="color:#1c87eb;" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
                     <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a> -->
                     <br> <br>
@@ -145,7 +145,7 @@
                     <a href="https://github.com/irenelue" style="font-size: 20px" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
                     <a href="https://www.instagram.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
                     <a href="https://www.twitter.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
-                    <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
+                    <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
                     <a href="https://www.behance.net/irene_lue" style="font-size: 20px" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
 
                   </div>
@@ -159,7 +159,7 @@
                 <!-- ========== Added Instagram ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title">
-                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> INSTAGRAM  </a>
+                    <a href="http://instagram.com/irenelue" style="color:#1c87eb;" target="_blank" title="Instagram"> INSTAGRAM  </a>
                   </div>
                   <div class="row">
                     <div class="column">
@@ -232,7 +232,7 @@
               <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
               <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
-              <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
+              <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
               <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a> -->
               <a href="https://www.behance.net/irene_lue" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
               <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
