added tons of hovers and changed font sizes

--- a/construction.html
+++ b/construction.html
@@ -65,9 +65,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="/#portfolio">WORK</a></li>
-          <li><a class="nav-link scrollto active" href="/#about">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">RESUME</a></li>
+          <li><a class="nav-link scrollto" href="/#portfolio">Work</a></li>
+          <li><a class="nav-link scrollto active" href="/#about">About</a></li>
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
         </ul> 
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
@@ -76,20 +76,6 @@
   </header><!-- End Header -->
 
   <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <!-- <ol>
-          <li><a href="index.html" class="class1">Home</a></li>
-          <li>COVID-Code</li>
-          <!-- add on RHS corner: Read Next: ...
-        </ol> -->
-        <!-- <h2>Portfolio Details</h2> -->
-
-      </div>
-    </section> <!-- End Breadcrumbs -->
 
     <!-- ======= About Section ======= -->
     <!-- <section id="team" class="team"> -->
@@ -120,7 +106,7 @@
                 <div class="col-lg-6 mx-auto"> 
                   <div class="about-title">
                     <!-- <p style="font-size:200%"> -->
-                      IT'S NICE TO MEET YOU! 🤝
+                      NICE TO MEET YOU! 🤝
                     <!-- <p> -->
                   </div>
                   <div class ="about-paragraph">
@@ -135,17 +121,18 @@
                     design, you can find me hiking, running, practicing photography, editing videos, or streaming songs on Spotify.
                   </div>
                   <div class ="about-paragraph">
-                    I'm always excited to collaborate and build new experiences. Feel free to reach me at: <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
+                    I'm always excited to collaborate and build new experiences. Feel free to reach me at: <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
+                    style="color:#1c87eb;" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
                     <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a> -->
                     <br> <br>
                     <!-- <a href="mailto: irenelue01@gmail.com" style="font-size: 20px" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
-                    <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
-                    <a href="https://www.instagram.com/irenelue/"  class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
+                    <a href="https://www.linkedin.com/in/irenelue/" style="font-size: 20px" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/irenelue" style="font-size: 20px" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
+                    <a href="https://www.instagram.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.twitter.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
                     <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
-                    <a href="https://www.behance.net/irene_lue"  class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
+                    <a href="https://www.behance.net/irene_lue" style="font-size: 20px" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
 
                   </div>
                   <!-- <div class = "about-link"> 
@@ -157,8 +144,8 @@
 
                 <!-- ========== Added Instagram ========== -->
                 <div class="instagram-container">
-                  <div class="instagram-title-box">
-                    <a class="instagram-title" href="http://instagram.com/irenelue" target="_blank" title="Instagram"> INSTAGRAM  </a>
+                  <div class="instagram-title">
+                    <a href="http://instagram.com/irenelue" style="color:#1c87eb;" target="_blank" title="Instagram"> INSTAGRAM  </a>
                   </div>
                   <div class="row">
                     <div class="column">
@@ -188,22 +175,6 @@
                     </div>            
                   </div>
                 </div> <!-- end of instagram container -->
-
-                <!-- ========== Added Spotify ========== -->
-<!--                 <div class="instagram-container">
-                  <div class="instagram-title">
-                    <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> Things I've been playing recently </a>
-                  </div>
-                  <div class="spotify-container">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                  </div>
-                  <div class="spotify-container2">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6yhVhbiH2ZMLSZX4alM4n4?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                
-                  </div>
-                  <div class="spotify-container3">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
-                </div> -->
-                 <!-- end of spotify container 
               </div>
           </section> <!-- End About Section -->
         </section> <!-- End Contact Section -->
@@ -241,7 +212,7 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px; margin-bottom:30px;"<span> </span> &copy; <span> IRENE LUE 2022 </span></h1>
+            <h1 style="color:#4e4e4e;font-size:12px;letter-spacing:0.5px; margin-bottom:30px;"<span> </span> &copy; <span> IRENE LUE 2022 </span></h1>
             <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
           </div>
         </div>
