--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="#portfolio">Work</a></li>
-          <li><a href="aboutme.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">WORK</a></li>
+          <li><a href="aboutme.html">ABOUT</a></li>
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">RESUME</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -332,7 +332,7 @@
       </div>
       <div class="me-md-auto text-center">
         <div class="copyright">
-          <h1 style="color:#4e4e4e;font-size:12px;letter-spacing:0.5px;margin-bottom:30px;"<span> </span> &copy; <span> IRENE LUE 2022 </span></h1>
+          <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px;margin-bottom:30px;"<span> </span> &copy; <span> IRENE LUE 2022 </span></h1>
           <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
         </div>
       </div>
