--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title">Covid Code</div>
+                    <div class="image_title">COVIDCODE</div>
                     <p class="image_description">
                         UX + UI Design
                     </p>
