added under construction page

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> IRENE LUE </a></h1>
+      <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="#portfolio">WORK</a></li>
-          <li><a href="aboutme.html">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">RESUME</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio" title="WORK">WORK</a></li>
+          <li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" title="RESUME" target="_blank">RESUME</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -192,7 +192,7 @@
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="portfolio-details.html" target="blank" title="Project 1">
+            <a href="construction.html" target="blank" title="COMING SOON">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -217,13 +217,13 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="portfolio-details2.html" target="blank" title="Project 2">
+            <a href="construction.html" target="blank" title="COMING SOON">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title">Project 2</div>
+                    <div class="image_title"> [ COMING SOON ]</div>
                     <p class="image_description">
-                        UX + UI Design
+                        
                     </p>
                 </div>
               </div>
@@ -232,13 +232,13 @@
 
           <!-- Proj 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="portfolio-details3.html" target="blank" title="Project 3">
+            <a href="construction.html" target="blank" title="COMING SOON ">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title">Project 3</div>
+                    <div class="image_title"> [ COMING SOON ] </div>
                     <p class="image_description">
-                        UX + UI Design
+                      
                     </p>
                 </div>
               </div>
