--- a/aboutme.html
+++ b/aboutme.html
@@ -14,21 +14,14 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,
-      400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|
-      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,
-      400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,600,600i,700,700i|
-      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
-
-      <link rel="preconnect" href="https://fonts.googleapis.com"> 
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-      <link href="http://fonts.cdnfonts.com/css/cocogoose?styles=44178" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/cocogoose?styles=44178" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,17 +51,17 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> IRENE LUE </a></h1>
+      <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="/#portfolio">WORK</a></li>
-          <li><a class="nav-link scrollto active" href="/#about">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">RESUME</a></li>
-        </ul> 
+         <li><a class="nav-link scrollto" href="#portfolio" title="WORK">WORK</a></li>
+          <li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" title="RESUME" target="_blank">RESUME</a></li>
+          </ul> 
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
 
