--- a/construction.html
+++ b/construction.html
@@ -13,13 +13,6 @@
 		<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
 		<!-- Google Fonts -->
-		<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,
-      400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|
-      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
-		<!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,
-      400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,600,600i,700,700i|
-      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
-
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -65,7 +58,8 @@
 		<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
 		<!-- Template Main CSS File -->
-		<link href="assets/css/style.css" rel="stylesheet" />
+		<link href="assets/css/construction.css" rel="stylesheet" />
+		<!-- <link href="assets/css/style.css" rel="stylesheet"> -->
 
 		<!-- ADDED: font awesome CSS -->
 		<link
@@ -88,18 +82,108 @@
 	<body>
 		<!-- ======= Header ======= -->
 		<header id="header" class="fixed-top header-inner-pages">
-			<div
-				class="container d-flex align-items-center justify-content-between"
-			></div>
+			<div class="container d-flex align-items-center justify-content-between">
+				<h1 class="logo"><a href="index.html" title="Home"> IRENE LUE </a></h1>
+				<!-- Uncomment below if you prefer to use an image logo -->
+				<!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+				<nav id="navbar" class="navbar">
+					<ul>
+						<!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
+						<li>
+							<a class="nav-link scrollto" href="#portfolio" title="WORK"
+								>WORK</a
+							>
+						</li>
+						<li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
+						<li>
+							<a
+								href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing"
+								title="RESUME"
+								target="_blank"
+								>RESUME</a
+							>
+						</li>
+					</ul>
+					<i class="bi bi-list mobile-nav-toggle"></i>
+				</nav>
+				<!-- .navbar -->
+			</div>
 		</header>
 		<!-- End Header -->
 
 		<main id="main">
-			<div id="bg">
-				<img src="assets/img/under.jpg" alt="" />
-			</div>
+			<!-- ======= UNDER CONSTRUCTION LANDING PAGE ======= -->
+			<section class="showcase">
+				<!-- <div class="video-container"> -->
+				<!-- 					<video
+						src="https://traversymedia.com/downloads/video.mov"
+						autoplay
+						muted
+						loop
+					></video> -->
+				<div class="video-container">
+					<img src="assets/img/banner.jpg" style="width: 250%" />
+				</div>
+				<div class="content">
+					<h1>COMING SOON</h1>
+					<h3>Working day and night to get this to you soon!</h3>
+					<!-- <a href="#about" class="btn">Read More</a> -->
+					<a
+						href="https://www.linkedin.com/in/irenelue/"
+						class="class1"
+						target="_blank"
+						class="linkedin"
+						title="LinkedIn"
+						><i class="fab fa-linkedin-in"></i
+					></a>
+					<a
+						href="https://github.com/irenelue"
+						class="class1"
+						target="_blank"
+						class="github"
+						title="GitHub"
+						><i class="bi bi-github"></i
+					></a>
+					<a
+						href="https://www.instagram.com/irenelue/"
+						class="class1"
+						target="_blank"
+						title="Instagram"
+						><i class="bi bi-instagram"></i
+					></a>
+					<a
+						href="https://www.twitter.com/irenelue/"
+						class="class1"
+						target="_blank"
+						title="Twitter"
+						><i class="bi bi-twitter"></i
+					></a>
+					<a
+						href="https://open.spotify.com/user/lueirene"
+						class="class1"
+						target="_blank"
+						title="Spotify"
+						><i class="fab fa-spotify"></i
+					></a>
+					<a
+						href="https://www.behance.net/irene_lue"
+						class="class1"
+						target="_blank"
+						class="linkedin"
+						title="Behance"
+						><i class="fab fa-behance"></i
+					></a>
+				</div>
+			</section>
 		</main>
 		<!-- End #main -->
+
+		<!-- ======= Footer ======= -->
+		<!-- <footer id="footer"> -->
+		<!-- commenting out to get rid of that gray shadow line -->
+		<!-- </footer> -->
+		<!-- End Footer commenting out to get rid of that gray shadow line -->
 
 		<!-- Vendor JS Files -->
 		<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
