--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -58,17 +58,18 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> IRENE LUE </a></h1>
+				<h1 class="logo"><a href="index.html" title="Home"> IRENE LUE </a></h1>
+
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-          <li><a class="nav-link scrollto active" href="/#portfolio">Work</a></li>
-          <li><a href="aboutme.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
-
+          <li><a class="nav-link scrollto" href="#portfolio" title="WORK">WORK</a></li>
+          <li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" title="RESUME" target="_blank">RESUME</a></li>
+          
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
