added under construction page

--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="construction.html" target="blank" title="COMING SOON">
+            <a href="construction.html" target="blank" title="COVIDCODE">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title">COVIDCODE</div>
                     <p class="image_description">
-                        UX + UI Design
+                        [ COMING SOON ]
                     </p>
                 </div>
               </div>
@@ -217,13 +217,13 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="construction.html" target="blank" title="COMING SOON">
+            <a href="construction.html" target="blank" title="POMO">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> [ COMING SOON ]</div>
+                    <div class="image_title"> POMOLO </div>
                     <p class="image_description">
-                        
+                        [ COMING SOON ]
                     </p>
                 </div>
               </div>
@@ -236,9 +236,9 @@
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> [ COMING SOON ] </div>
+                    <div class="image_title"> SKETCH </div>
                     <p class="image_description">
-                      
+                      [ COMING SOON ]
                     </p>
                 </div>
               </div>
