fixed weird link

--- a/construction.html
+++ b/construction.html
@@ -90,11 +90,7 @@
 				<nav id="navbar" class="navbar">
 					<ul>
 						<!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-						<li>
-							<a class="nav-link scrollto" href="#portfolio" title="WORK"
-								>WORK</a
-							>
-						</li>
+						<li><a href="index.html" title="WORK">WORK</a></li>
 						<li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
 						<li>
 							<a
