--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -66,7 +66,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="#portfolio" title="WORK">WORK</a></li>
+          <li><a href="index.html" title="WORK">WORK</a></li>
           <li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" title="RESUME" target="_blank">RESUME</a></li>
           
