--- a/aboutme.html
+++ b/aboutme.html
@@ -60,8 +60,7 @@
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
           <li><a href="index.html" title="WORK">WORK</a></li>
           <li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" title="RESUME" target="_blank">RESUME</a></li>
-          </ul> 
+          <li><a href="https://drive.google.com/file/d/1pt47bw0hPYsacfPUJLss1CwnAtJXBglO/view?usp=sharing" title="RESUME" target="_blank">RESUME</a></li>          </ul> 
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
 
