--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="construction.html" target="blank" title="COVIDCODE">
+            <a href="under_construction.html" target="blank" title="COVIDCODE">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -217,7 +217,7 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="construction.html" target="blank" title="POMO">
+            <a href="under_construction.html" target="blank" title="POMO">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -232,7 +232,7 @@
 
           <!-- Proj 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="construction.html" target="blank" title="COMING SOON ">
+            <a href="under_construction.html" target="blank" title="COMING SOON ">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
