--- a/under_construction.html
+++ b/under_construction.html
@@ -119,11 +119,14 @@
 						loop
 					></video> -->
 				<div class="video-container">
-					<img src="assets/img/banner.jpg" style="width: 300%" />
+					<img src="assets/img/hero-bga.jpg" style="max-width: 200%" />
 				</div>
 				<div class="content">
 					<h1>COMING SOON</h1>
-					<h3>Working day and night, stay tuned!</h3>
+					<!-- 					<h3>
+						This site is under construction, <br />
+						hope to see you again soon!
+					</h3> -->
 					<!-- <a href="#about" class="btn">Read More</a> -->
 					<a
 						href="https://www.linkedin.com/in/irenelue/"
