--- a/aboutme.html
+++ b/aboutme.html
@@ -182,19 +182,20 @@
                 </div> <!-- end of instagram container -->
 
                 <!-- ========== Added Spotify ========== -->
-<!--                 <div class="instagram-container">
-                  <div class="instagram-title">
-                    <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> Things I've been playing recently </a>
+                <div class="instagram-container">
+                  <div class="instagram-title-box">
+                    <a class="instagram-title" href="https://open.spotify.com/user/lueirene" style="margin-top:0px" target="_blank" title="Spotify"> THINGS I'VE BEEN LISTENING TO </a>
                   </div>
                   <div class="spotify-container">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="99%" height="230" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                   </div>
                   <div class="spotify-container2">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6yhVhbiH2ZMLSZX4alM4n4?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6yhVhbiH2ZMLSZX4alM4n4?utm_source=generator" width="99%" height="230" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                
                   </div>
                   <div class="spotify-container3">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
-                </div> -->
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="230" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
+                  </div>
+                </div>
                  <!-- end of spotify container 
               </div>
           </section> <!-- End About Section -->
